Links naar profile pagina ingevuld, basics profile pagina toegevoegd

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 
                           <li class="nav-item-top nav-top-middle">
                             <img id="profile" class="float" src="images/transparant.png">
-                            <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                            <a class="nav-link nav-top-middle-text" href="profile.html">PROFILE</a>
                           </li>
 
                           <li class="nav-item-top">
@@ -130,7 +130,7 @@
                         <a class="nav-link active" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">ART</a>
+                        <a class="nav-link" href="home.html">ART</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="search.html">ISEARCH</a>
@@ -139,10 +139,10 @@
                         <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYBIDS</a>
+                        <a class="nav-link" href="home.html">MYBIDS</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="home.html">CONTACT</a>
                       </li>
                   </ul>
 
@@ -151,9 +151,9 @@
 
               <div class="languages">
                 <p>
-                  <a href="#">NL</a>
-                  <a href="#">FR</a>
-                  <a href="#">EN</a>
+                  <a href="home.html">NL</a>
+                  <a href="home.html">FR</a>
+                  <a href="home.html">EN</a>
                 </p>
               </div>
 
@@ -258,7 +258,7 @@
                     <div class="position">
                         <img src="images/ring-mozaik.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
                         <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                            <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                     <div class="position">
                         <img src="images/klok-mozaik.jpg" class="img-fluid" alt="Dahli's melted clock">
                         <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                            <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                         </div>
                     </div>
                 </div>
@@ -280,7 +280,7 @@
                     <div class="position">
                         <img src="images/vrouw-mozaik.jpg" class="img-fluid " alt="Painting of woman">
                         <div class="overlay flex-center">
-                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                            <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
 
                 <div class="blok">
                   <p class="footer-title">HELP</p>
-                  <p><a href="#">Login</a></p>
+                  <p><a href="home.html">Login</a></p>
                   <p><a href="register.html">Register</a></p>
                 </div>
 
@@ -467,7 +467,7 @@
                           <a class="nav-link active" href="home.html">HOME</a>
                         </li>
                         <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">ART</a>
+                          <a class="nav-link" href="home.html">ART</a>
                         </li>
                         <li class="nav-item-bottom">
                           <a class="nav-link" href="search.html">ISEARCH</a>
@@ -476,10 +476,10 @@
                           <a class="nav-link" href="myauctions.html">MYAUCTIONS</a>
                         </li>
                         <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYBIDS</a>
+                          <a class="nav-link" href="home.html">MYBIDS</a>
                         </li>
                         <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">CONTACT</a>
+                          <a class="nav-link" href="home.html">CONTACT</a>
                         </li>
                     </ul>
 
