--- a/profile.html
+++ b/profile.html
@@ -14,8 +14,8 @@
 
 
     <meta charset="utf-8">
-    <title>FAQ for Landoretti Art</title>
-    <meta name="description" content="Not sure how to buy an artpiece? Or sell it? How to make a watchlist or how to use it? Take a look at the FAQ for Landoretti Art.">
+    <title>My profile in Landoretti Art</title>
+    <meta name="description" content="Look through the summary of your personal information and see which of your auctions are currently active.">
     <!-- Voor responsiveness, Bootstrap is mobile first -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -93,7 +93,7 @@
 
                           <li class="nav-item-top nav-top-middle">
                             <img id="profile" class="float" src="images/transparant.png">
-                            <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                            <a class="nav-link nav-top-middle-text active" href="profile.html">PROFILE</a>
                           </li>
 
                           <li class="nav-item-top">
@@ -128,7 +128,7 @@
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="home.html">HOME</a>
+                        <a class="nav-link" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">ART</a>
@@ -190,30 +190,27 @@
 
     <div class="container padding-0 content-page">
 
-      <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Frequently Asked Questions</a></p>
+      <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Jasper Poppe</a></p>
 
-      <h1>Find what you’re looking for?</h1>
+      <h1>Profile</h1>
 
 
-      <div class="row frame frame-faq-links">
+      <div class="frame frame-profile">
 
-        <div class="col faq-links">
-          <p><a href="#">How to bid?</a></p>
-          <p><a href="#">How to sell?</a></p>
+        <div class="row profile-title">
+          <h4>Jasper Poppe</h4>
         </div>
 
-        <div class="col faq-links">
-          <p><a href="#">How to buy?</a></p>
-          <p><a href="#">How to register?</a></p>
-        </div>
+        <div class="row">
+          <div class="col col-3">
+            <p><a href="#">How to bid?</a></p>
+            <p><a href="#">How to sell?</a></p>
+          </div>
 
-        <div class="col faq-links">
-          <p><a href="#">How to ask a question?</a></p>
-          <p><a href="#">What is a watchlist?</a></p>
-        </div>
-
-        <div class="col faq-links">
-          <p><a href="#">How to use a watchlist?</a></p>
+          <div class="col col-3">
+            <p><a href="#">How to buy?</a></p>
+            <p><a href="#">How to register?</a></p>
+          </div>
         </div>
 
       </div>
@@ -228,99 +225,6 @@
 
       </div>
 
-
-
-      <div class="questions-faq">
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to bid?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to sell?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to buy?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to register?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to ask a question?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">What is a watchlist?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
-
-
-        <div class="question">
-          <div class="row">
-            <p class="display-inline">Q</p>
-            <p class="display-inline">How to use a watchlist?</p>
-          </div>
-
-          <div class="row">
-            <p class="display-inline">A</p>
-            <p class="display-inline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>ostrud exercitation</span> ullamco laboris nisi ut aliquip ex ea <a href="#">commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-          </div>
-        </div>
 
 
       </div><!-- end container content -->
