--- a/faq.html
+++ b/faq.html
@@ -93,7 +93,7 @@
 
                           <li class="nav-item-top nav-top-middle">
                             <img id="profile" class="float" src="images/transparant.png">
-                            <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                            <a class="nav-link nav-top-middle-text" href="profile.html">PROFILE</a>
                           </li>
 
                           <li class="nav-item-top">
