--- a/myauctions.html
+++ b/myauctions.html
@@ -93,7 +93,7 @@
 
                           <li class="nav-item-top nav-top-middle">
                             <img id="profile" class="float" src="images/transparant.png">
-                            <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                            <a class="nav-link nav-top-middle-text" href="profile.html">PROFILE</a>
                           </li>
 
                           <li class="nav-item-top">
@@ -190,7 +190,7 @@
 
       <div class="container padding-0 content-page">
 
-        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Jasper Poppe</a> > <a href="#">My auctions</a></p>
+        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="profile.html">Jasper Poppe</a> > <a href="#">My auctions</a></p>
 
         <h1 class="margin-bottom-0">My auctions</h1>
 
