--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -94,7 +94,7 @@
 
                     <li class="nav-item-top nav-top-middle">
                       <img id="profile" class="float" src="images/transparant.png">
-                      <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                      <a class="nav-link nav-top-middle-text" href="profile.html">PROFILE</a>
                     </li>
 
                     <li class="nav-item-top">
@@ -192,7 +192,7 @@
 
       <div class="container padding-0 content-page">
 
-        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="#">Jasper Poppe</a> > <a href="#">My watchlist</a></p>
+        <p class="breadcrumbs"><a href="home.html">Home</a> > <a href="profile.html">Jasper Poppe</a> > <a href="#">My watchlist</a></p>
 
         <h1 class="margin-bottom-0">My watchlist</h1>
 
