Toegevoegd profiel info op profile pagina

--- a/profile.html
+++ b/profile.html
@@ -201,15 +201,39 @@
           <h4>Jasper Poppe</h4>
         </div>
 
+
         <div class="row">
-          <div class="col col-3">
-            <p><a href="#">How to bid?</a></p>
-            <p><a href="#">How to sell?</a></p>
+          <div class="col col-3 profile-info">
+
+            <div>
+              <img id="mail" class="display-inline" src="images/transparant.png" alt="mail envelope">
+              <p class="display-inline"><a href="mailto:name@domain.com">name@domain.com</a></p>
+            </div>
+
+            <div>
+              <img id="cellphone" class="display-inline" src="images/transparant.png" alt="cellphone">
+              <p class="display-inline">+xx (0)x xxx xx xx</p>
+            </div>
+
+            <div>
+              <p>Straatnaam xxx</p>
+              <p>xxx, Oostende</p>
+            </div>
+
           </div>
 
-          <div class="col col-3">
-            <p><a href="#">How to buy?</a></p>
-            <p><a href="#">How to register?</a></p>
+
+
+          <div class="col col-3 account-info">
+            <div>
+              <label>VAT-number</label>
+              <p>xx xxx xx xx</p>
+            </div>
+
+            <div>
+              <label>Account-number</label>
+              <p>xx xxx xx xx</p>
+            </div>
           </div>
         </div>
 
@@ -224,6 +248,9 @@
         </button>
 
       </div>
+
+
+      <h4>Active auctions</h4>
 
 
 
