--- a/profile.html
+++ b/profile.html
@@ -254,6 +254,42 @@
 
 
 
+      <div id="SliderAuctions" class="carousel slide" data-ride="carousel">
+
+
+          <!-- images slider -->
+          <div class="carousel-inner" role="listbox">
+
+              <div class="carousel-item active">
+                  <img class="d-block img-fluid" src="images/slider/art-gallery.jpg" alt="Slider image of art gallery">
+              </div>
+
+              <div class="carousel-item">
+                  <img class="d-block img-fluid" src="images/slider/vintage-camera.jpg" alt="Slider image of vintage camera">
+              </div>
+
+              <div class="carousel-item">
+                  <img class="d-block img-fluid" src="images/slider/record-player.jpg" alt="Slider image of of record player">
+              </div>
+
+          </div>
+
+          <!-- controls slider -->
+          <a class="carousel-control-prev" href="#SliderAuctions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+
+          <a class="carousel-control-next" href="#SliderAuctions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+
+      </div><!-- end carousel slider top -->
+
+
+
+
       </div><!-- end container content -->
 
 
