--- a/profile.html
+++ b/profile.html
@@ -260,17 +260,72 @@
           <!-- images slider -->
           <div class="carousel-inner" role="listbox">
 
-              <div class="carousel-item active">
-                  <img class="d-block img-fluid" src="images/slider/art-gallery.jpg" alt="Slider image of art gallery">
+
+              <div class="carousel-item active clearfix">
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
               </div>
 
-              <div class="carousel-item">
-                  <img class="d-block img-fluid" src="images/slider/vintage-camera.jpg" alt="Slider image of vintage camera">
+
+              <!-- second row of auctions-->
+              <div class="carousel-item clearfix">
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
+
+                <div class="col-md-3 float">
+                  <div class="position">
+                    <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  </div>
+                </div>
+
               </div>
 
-              <div class="carousel-item">
-                  <img class="d-block img-fluid" src="images/slider/record-player.jpg" alt="Slider image of of record player">
-              </div>
+
 
           </div>
 
