Toegevoegd hover met vergrootglas op slider images

--- a/profile.html
+++ b/profile.html
@@ -266,6 +266,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -273,6 +276,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -280,6 +286,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -287,6 +296,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -299,6 +311,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -306,6 +321,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -313,6 +331,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
@@ -320,6 +341,9 @@
                 <div class="col-md-3 float">
                   <div class="position">
                     <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                    <div class="overlay flex-center">
+                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
                   </div>
                 </div>
 
