Toegevoegd cards onder foto's slider Auctions op Profile

--- a/profile.html
+++ b/profile.html
@@ -240,14 +240,7 @@
       </div>
 
 
-      <div class="clearfix">
 
-        <button class="button-light search-button" type="button">
-          <p class="display-inline"><a href="search.html">I SEARCH</a></p>
-          <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
-        </button>
-
-      </div>
 
 
       <h4>Active auctions</h4>
@@ -264,40 +257,101 @@
               <div class="carousel-item active clearfix">
 
                 <div class="col-md-3 float">
+
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
                     <div class="overlay flex-center">
                         <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                     </div>
                   </div>
+
+                  <div class="slider-auction-info">
+                    <p>1979, Salvador Dali</p>
+                    <p>Dance of time III</p>
+                    <p>€ 8.900</p>
+                    <div class="clearfix">
+                      <p class="countdown">25d 14u 44min</p>
+                      <button class="button-light search-button" type="button">
+                        <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                        <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                      </button>
+                    </div>
+                  </div>
                 </div>
 
 
+
                 <div class="col-md-3 float">
+
                   <div class="position">
                     <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
                     <div class="overlay flex-center">
                         <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                     </div>
                   </div>
+
+                  <div class="slider-auction-info">
+                    <p>1979, Salvador Dali</p>
+                    <p>Dance of time III</p>
+                    <p>€ 8.900</p>
+                    <div class="clearfix">
+                      <p class="countdown">25d 14u 44min</p>
+                      <button class="button-light search-button" type="button">
+                        <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                        <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                      </button>
+                    </div>
+                  </div>
+
                 </div>
 
 
+
                 <div class="col-md-3 float">
+
                   <div class="position">
                     <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
                     <div class="overlay flex-center">
                         <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                     </div>
                   </div>
+
+                  <div class="slider-auction-info">
+                    <p>1979, Salvador Dali</p>
+                    <p>Dance of time III</p>
+                    <p>€ 8.900</p>
+                    <div class="clearfix">
+                      <p class="countdown">25d 14u 44min</p>
+                      <button class="button-light search-button" type="button">
+                        <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                        <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                      </button>
+                    </div>
+                  </div>
+
                 </div>
 
 
+
                 <div class="col-md-3 float">
+
                   <div class="position">
                     <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
                     <div class="overlay flex-center">
                         <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                    </div>
+                  </div>
+
+                  <div class="slider-auction-info">
+                    <p>1979, Salvador Dali</p>
+                    <p>Dance of time III</p>
+                    <p>€ 8.900</p>
+                    <div class="clearfix">
+                      <p class="countdown">25d 14u 44min</p>
+                      <button class="button-light search-button" type="button">
+                        <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                        <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -308,46 +362,107 @@
               <!-- second row of auctions-->
               <div class="carousel-item clearfix">
 
-                <div class="col-md-3 float">
-                  <div class="position">
-                    <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
-                    <div class="overlay flex-center">
-                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                    </div>
+              <div class="col-md-3 float">
+
+                <div class="position">
+                  <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  <div class="overlay flex-center">
+                      <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                   </div>
                 </div>
 
+                <div class="slider-auction-info">
+                  <p>1979, Salvador Dali</p>
+                  <p>Dance of time III</p>
+                  <p>€ 8.900</p>
+                  <div class="clearfix">
+                    <p class="countdown">25d 14u 44min</p>
+                    <button class="button-light search-button" type="button">
+                      <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                      <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                    </button>
+                  </div>
+                </div>
+              </div>
 
-                <div class="col-md-3 float">
-                  <div class="position">
-                    <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
-                    <div class="overlay flex-center">
-                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                    </div>
+
+
+              <div class="col-md-3 float">
+
+                <div class="position">
+                  <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  <div class="overlay flex-center">
+                      <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                   </div>
                 </div>
 
-
-                <div class="col-md-3 float">
-                  <div class="position">
-                    <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
-                    <div class="overlay flex-center">
-                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="col-md-3 float">
-                  <div class="position">
-                    <img src="images/sliderAuctions/auction-men-blue-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
-                    <div class="overlay flex-center">
-                        <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
-                    </div>
+                <div class="slider-auction-info">
+                  <p>1979, Salvador Dali</p>
+                  <p>Dance of time III</p>
+                  <p>€ 8.900</p>
+                  <div class="clearfix">
+                    <p class="countdown">25d 14u 44min</p>
+                    <button class="button-light search-button" type="button">
+                      <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                      <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                    </button>
                   </div>
                 </div>
 
               </div>
+
+
+
+              <div class="col-md-3 float">
+
+                <div class="position">
+                  <img src="images/sliderAuctions/auction-lachen-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  <div class="overlay flex-center">
+                      <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                  </div>
+                </div>
+
+                <div class="slider-auction-info">
+                  <p>1979, Salvador Dali</p>
+                  <p>Dance of time III</p>
+                  <p>€ 8.900</p>
+                  <div class="clearfix">
+                    <p class="countdown">25d 14u 44min</p>
+                    <button class="button-light search-button" type="button">
+                      <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                      <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                    </button>
+                  </div>
+                </div>
+
+              </div>
+
+
+
+              <div class="col-md-3 float">
+
+                <div class="position">
+                  <img src="images/sliderAuctions/auction-klok-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  <div class="overlay flex-center">
+                      <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                  </div>
+                </div>
+
+                <div class="slider-auction-info">
+                  <p>1979, Salvador Dali</p>
+                  <p>Dance of time III</p>
+                  <p>€ 8.900</p>
+                  <div class="clearfix">
+                    <p class="countdown">25d 14u 44min</p>
+                    <button class="button-light search-button" type="button">
+                      <p class="display-inline"><a href="#">VISIT AUCTION</a></p>
+                      <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+            </div>
 
 
 
@@ -364,7 +479,10 @@
               <span class="sr-only">Next</span>
           </a>
 
-      </div><!-- end carousel slider top -->
+      </div><!-- end carousel slider -->
+
+
+
 
 
 
