Toegevoegd werkende pijltjes slider hoogte van img, niet hele slider

--- a/profile.html
+++ b/profile.html
@@ -365,7 +365,7 @@
               <div class="col-md-3 float">
 
                 <div class="position">
-                  <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                  <img src="images/sliderAuctions/auction-lady-orange-slider.jpg" id="HeightImgSlider" class="img-fluid" alt="magnifying glass on paper with post stamps">
                   <div class="overlay flex-center">
                       <a href="home.html"><img src="images/searchicon-groot.png" alt="See artwork"></a>
                   </div>
